Fixed the alignment of icons.

--- a/css/style.css
+++ b/css/style.css
@@ -459,6 +459,7 @@ html {
   background-color: #fff;
   position: fixed;
   width: 100%;
+  z-index: 9999;
 }
 
 .top-navigation > .content {
@@ -544,12 +545,18 @@ html {
 /* THREE-ICON SECTION */
 
 .cases {
-  margin-top: 7.875rem;
-  text-align: center;
   padding-bottom: 5rem;
+  overflow: hidden;
 }
 
-.cases h2{
+.cases .content{
+  margin-top: 7.875rem;
+  padding: none;
+  text-align: center;
+  width: 60%;
+}
+
+.cases .content > h2{
   font-size: 2.75rem;
   font-weight: 300;
   margin: 1.625rem 0 3.125rem;
@@ -557,17 +564,20 @@ html {
 
 .devices {
   list-style: none;
-  border: 1px solid chocolate;
+  padding: 0; /* WHYYYYYY DO I NEED THIS (user agent stylesheet) */
 }
 
-.cases .devices > li{
-  width: 33.3333333%;
+.cases .devices  li{
+  width: 33.33333%;
   float: left;
 }
 
-.cases .devices h3{
+.cases .devices h3 {
   font-weight: 400;
   font-size: 1.563rem;
   margin: 2.5rem, 0px, 1.875rem;
 }
+
+/* FOOTER */
+
 
